# ollama-tui

./: .gitignore  AGENT_FRESH_CONTEXT.md  AGENT_IMPROVEMENTS.md  AGENT_MODE_IMPLEMENTATION.md  Cargo.toml  GEMINI_CLI_AGENT_WORKFLOW.md  LICENSE  OLLAMA_AND_AGENT_DOCS.md  README.md  UI_MODERNIZATION_SUMMARY.md  appimage.yml  crates.js  example-config.json  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js  test_parse.rs
atomic_waker/: all.html  index.html  struct.AtomicWaker.html
base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  struct.TryGetError.html
cassowary/: all.html  enum.AddConstraintError.html  enum.AddEditVariableError.html  enum.RelationalOperator.html  enum.RemoveConstraintError.html  enum.RemoveEditVariableError.html  enum.SuggestValueError.html  enum.WeightedRelation.html  index.html  struct.Constraint.html  struct.Expression.html  struct.PartialConstraint.html  struct.Solver.html  struct.Term.html  struct.Variable.html
castaway/: all.html  index.html  macro.cast.html  macro.match_type.html  trait.LifetimeFree.html
cfg_if/: all.html  index.html  (+1 more)
(+21103 files in other folders)
