[package]
name = "ollama-chat"
version = "0.1.0"
authors = ["Anuragh K P <kpanuragh@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] } 
serde = {version = "1.0.218",features=["derive"]}
serde_json = "1.0.139"
tokio = { version = "1.40.0", features = ["full"] }
