[package]
name = "ollama-tui"
version = "1.2.7"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
textwrap = "0.16.2"
unicode-width = "0.1.11"
futures-util = "0.3.31"
rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = { version = "0.4.41", features = ["serde"] }
directories = "6.0.0"
